src/sddekit.h


typedef enum sd_stat {
	SD_OK,
	SD_ERR,
	SD_CONT,
	SD_STOP
} sd_stat;
typedef struct sd_rng sd_rng;
struct sd_rng {
	void *ptr;
	void (*seed)(sd_rng*, uint32_t seed);
	double (*norm)(sd_rng*);
	void (*fill_norm)(sd_rng*, uint32_t n, double *x);
	uint32_t (*nbytes)(sd_rng*);
	void (*free)(sd_rng*);
};
typedef struct sd_hist sd_hist;
struct sd_hist {
	void *ptr;
	uint32_t(*get_maxvi)(sd_hist*);
	uint32_t(*get_vi2i)(sd_hist*, uint32_t vi);
	uint32_t(*get_nu)(sd_hist *h);
	void (*free)(sd_hist *h);
	sd_stat (*fill)(sd_hist *h, sd_hfill *filler);
	void (*get)(sd_hist *h, double t, double *aff);
	void (*set)(sd_hist *h, double t, double *eff);
	uint32_t (*nbytes)(sd_hist *h);
	double (*get_buf_lin)(sd_hist *h, uint32_t index);
	uint32_t (*get_nd)(sd_hist *h);
	double (*get_t)(sd_hist *h);
	double (*get_dt)(sd_hist *h);
	uint32_t (*get_lim)(sd_hist *h, uint32_t i);
	uint32_t (*get_len)(sd_hist *h, uint32_t i);
	uint32_t (*get_pos)(sd_hist *h, uint32_t i);
	uint32_t (*get_uvi)(sd_hist *h, uint32_t i);
	double (*get_maxd)(sd_hist *h, uint32_t i);
	uint32_t (*get_vi)(sd_hist *h, uint32_t i);
	double (*get_vd)(sd_hist *h, uint32_t i);
	bool (*buf_is_null)(sd_hist *h);
};
typedef struct sd_sys_in { 
	uint32_t nx, nc, id;
	double t, *x, *i; 
	sd_hist *hist;
	sd_rng *rng;
} sd_sys_in;
typedef struct sd_sys_out { 
	double *f, *g, *o; 
} sd_sys_out;
typedef struct sd_sys sd_sys;
struct sd_sys {
	uint32_t (*ndim)(sd_sys*);
	uint32_t (*ndc)(sd_sys*);
	uint32_t (*nobs)(sd_sys*);
	uint32_t (*nrpar)(sd_sys*);
	uint32_t (*nipar)(sd_sys*);
	sd_stat (*apply)(sd_sys*, sd_sys_in*, sd_sys_out*);
	void (*free)(sd_sys*);
	void *ptr;
};
SD_API sd_sys *
sd_sys_new_cb(uint32_t ndim, uint32_t ndc, uint32_t nobs, 
	uint32_t nrpar, uint32_t nipar,
	void *user_data,
	sd_stat (*user_apply)(void *, sd_sys_in*, sd_sys_out*));
typedef struct sd_sys_exc sd_sys_exc;
struct sd_sys_exc {
	void *ptr;
	sd_sys *(*sys)(sd_sys_exc*);
	double (*get_a)(sd_sys_exc *d);
	void (*set_a)(sd_sys_exc *d, double new_a);
	double (*get_tau)(sd_sys_exc *d);
	void (*set_tau)(sd_sys_exc *d, double new_tau);
	double (*get_D)(sd_sys_exc *d);
	void (*set_D)(sd_sys_exc *d, double new_D);
	double (*get_k)(sd_sys_exc *d);
	void (*set_k)(sd_sys_exc *d, double new_k);
};
SD_API sd_sys_exc *
sd_sys_exc_new();
typedef struct sd_net sd_net;
struct sd_net {
	void *ptr;
	sd_sys * ( * sys)(sd_net *d);
	void (*free)(sd_net *d);
	uint32_t (*get_n)(sd_net *net);
	uint32_t (*get_m)(sd_net *net);
	uint32_t (*get_nnz)(sd_net *net);
	uint32_t *(*get_or)(sd_net *net);
	uint32_t (*get_or_i)(sd_net *net, uint32_t i);
	uint32_t *(*get_ic)(sd_net *net);
	uint32_t (*get_ic_i)(sd_net *net, uint32_t i);
	double *(*get_w)(sd_net *net);
	double (*get_w_i)(sd_net *net, uint32_t i);
	double *(*get_d)(sd_net *net);
	double (*get_d_i)(sd_net *net, uint32_t i);
	uint32_t (*get_ns)(sd_net *net);
	uint32_t (*get_ne)(sd_net *net);
	bool (*cn_is_null)(sd_net *net);
	uint32_t (*get_Ms_i)(sd_net *net, uint32_t i);
	uint32_t (*get_Ma_i)(sd_net *net, uint32_t i);
	uint32_t (*get_Me_i)(sd_net *net, uint32_t i);
	uint32_t (*get_M_i)(sd_net *net, uint32_t i);
	sd_sys * (*get_models_i)(sd_net *net, uint32_t i);
	bool (*get__init1)(sd_net *net);
};
SD_API sd_net*
sd_net_new_het(uint32_t n, uint32_t m, uint32_t * restrict M, uint32_t * restrict Ms, 
	       uint32_t * restrict Ma, uint32_t * restrict Me, 
	       sd_sys **models,
	       uint32_t nnz, uint32_t * restrict Or, uint32_t * restrict Ic, 
		   double * restrict w, double * restrict d);
SD_API sd_net *
sd_net_new_hom(uint32_t n, sd_sys *sys,
	uint32_t ns, uint32_t na, uint32_t ne, uint32_t nnz, 
	uint32_t * restrict Or,
	uint32_t * restrict Ic, 
	double * restrict w,
	double * restrict d);
SD_API sd_sys *
sd_roi_new_default(uint32_t n, uint32_t *map);
typedef struct sd_out sd_out;
struct sd_out {
	void *ptr;
	void (*free)(sd_out *);
	sd_stat (*apply)(sd_out *, double t, 
			     uint32_t nx, double * restrict x,
			     uint32_t nc, double * restrict c);
};
SD_API sd_out *
sd_out_new_cb(void *user_data,
	sd_stat (*user_apply)(void *, double t, 
	     uint32_t nx, double * restrict x,
	     uint32_t nc, double * restrict c));
typedef struct sd_out_file sd_out_file;
struct sd_out_file {
	void *ptr;
	sd_out * ( * out)(sd_out_file *);
	bool (*is_std)(sd_out_file *d);
	FILE *(*get_fd)(sd_out_file *d);
};
SD_API sd_out_file *
sd_out_file_new_from_name(char *fname);
SD_API sd_out_file *
sd_out_file_new_from_std(FILE *std);
typedef struct sd_out_mem sd_out_mem;
struct sd_out_mem {
	void *ptr;
	sd_out * ( * out)(sd_out_mem *);
	uint32_t (*get_nx)(sd_out_mem *d);
	uint32_t (*get_nc)(sd_out_mem *d);
	uint32_t (*get_n_sample)(sd_out_mem *d);
	uint32_t (*get_capacity)(sd_out_mem *d);
	double *(*get_xs)(sd_out_mem *d);
	double *(*get_cs)(sd_out_mem *d);
};
SD_API sd_out_mem *
sd_out_mem_new();
typedef struct sd_out_tee sd_out_tee;
struct sd_out_tee {
	void *ptr;
	sd_out * ( * out)(sd_out_tee *);
	uint32_t (*get_nout)(sd_out_tee *);
	bool (*outs_is_null)(sd_out_tee *);
	sd_stat (*set_out)(sd_out_tee *, uint32_t i, sd_out *out);
	sd_out *(*get_out)(sd_out_tee *, uint32_t i);
};
SD_API sd_out_tee *
sd_out_tee_new(uint32_t nout);
typedef struct sd_out_tavg sd_out_tavg;
struct sd_out_tavg {
	void *ptr;
	sd_out * ( * out)(sd_out_tavg *);
	uint32_t (*get_len)(sd_out_tavg *d);
	uint32_t (*get_pos)(sd_out_tavg *d);
	double (*get_t)(sd_out_tavg *d);
	sd_out * (*get_out)(sd_out_tavg *d);
	double *(*get_x)(sd_out_tavg *d);
	double *(*get_c)(sd_out_tavg *d);
};
SD_API sd_out_tavg *
sd_out_tavg_new(uint32_t len, sd_out *out);
typedef struct sd_out_sfilt sd_out_sfilt;
struct sd_out_sfilt {
	void *ptr;
	sd_out * ( * out)(sd_out_sfilt *);
	uint32_t (*get_nfilt)(sd_out_sfilt *d);
	uint32_t (*get_filtlen)(sd_out_sfilt *d);
	double *(*get_xfilts)(sd_out_sfilt *d);
	double *(*get_cfilts)(sd_out_sfilt *d);
	double *(*get_x)(sd_out_sfilt *d);
	double *(*get_c)(sd_out_sfilt *d);
	sd_out *(*get_out)(sd_out_sfilt *d);
};
SD_API sd_out_sfilt *
sd_out_sfilt_new(uint32_t nfilt, uint32_t filtlen, 
	double * restrict xfilts, double * restrict cfilts, 
	sd_out *out);
SD_API sd_out *
sd_out_new_until(double time);
SD_API sd_out *
sd_out_ignore(bool ignore_x, bool ignore_c);
typedef struct sd_sch sd_sch;
struct sd_sch {
	void *ptr;
	uint32_t (*get_nx)(sd_sch *);
	sd_stat (*apply)(sd_sch *, sd_hist *, sd_rng *, sd_sys *,
		double t, double dt, 
		uint32_t nx, double * restrict x,
		uint32_t nc, double * restrict c);
	void (*free)(sd_sch *);
};
SD_API sd_sch *
sd_sch_new_cb(uint32_t nx, void *user_data,
	sd_stat (*user_apply)(void *, sd_hist *, sd_rng *, sd_sys *,
		double t, double dt, 
		uint32_t nx, double * restrict x,
		uint32_t nc, double * restrict c)
	);