python/_sddekit.py


# /home/mw/dev/sddekit/src/sddekit.h: 516
if hasattr(_libs['SDDEKit'], 'sd_sys_new_cb'):
    sd_sys_new_cb = _libs['SDDEKit'].sd_sys_new_cb
    sd_sys_new_cb.argtypes = [c_uint32, c_uint32, c_uint32, c_uint32, c_uint32, POINTER(None), CFUNCTYPE(UNCHECKED(sd_stat), POINTER(None), POINTER(sd_sys_in), POINTER(sd_sys_out))]
    sd_sys_new_cb.restype = POINTER(sd_sys)

# /home/mw/dev/sddekit/src/sddekit.h: 533
class struct_sd_sys_exc(Structure):
    pass

sd_sys_exc = struct_sd_sys_exc # /home/mw/dev/sddekit/src/sddekit.h: 528

struct_sd_sys_exc.__slots__ = [
    'ptr',
    'sys',
    'get_a',
    'set_a',
    'get_tau',
    'set_tau',
    'get_D',
    'set_D',
    'get_k',
    'set_k',
]
struct_sd_sys_exc._fields_ = [
    ('ptr', POINTER(None)),
    ('sys', CFUNCTYPE(UNCHECKED(POINTER(sd_sys)), POINTER(sd_sys_exc))),
    ('get_a', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_sys_exc))),
    ('set_a', CFUNCTYPE(UNCHECKED(None), POINTER(sd_sys_exc), c_double)),
    ('get_tau', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_sys_exc))),
    ('set_tau', CFUNCTYPE(UNCHECKED(None), POINTER(sd_sys_exc), c_double)),
    ('get_D', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_sys_exc))),
    ('set_D', CFUNCTYPE(UNCHECKED(None), POINTER(sd_sys_exc), c_double)),
    ('get_k', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_sys_exc))),
    ('set_k', CFUNCTYPE(UNCHECKED(None), POINTER(sd_sys_exc), c_double)),
]

# /home/mw/dev/sddekit/src/sddekit.h: 607
if hasattr(_libs['SDDEKit'], 'sd_sys_exc_new'):
    sd_sys_exc_new = _libs['SDDEKit'].sd_sys_exc_new
    sd_sys_exc_new.argtypes = []
    sd_sys_exc_new.restype = POINTER(sd_sys_exc)

# /home/mw/dev/sddekit/src/sddekit.h: 649
class struct_sd_net(Structure):
    pass

sd_net = struct_sd_net # /home/mw/dev/sddekit/src/sddekit.h: 644

struct_sd_net.__slots__ = [
    'ptr',
    'sys',
    'free',
    'get_n',
    'get_m',
    'get_nnz',
    'get_or',
    'get_or_i',
    'get_ic',
    'get_ic_i',
    'get_w',
    'get_w_i',
    'get_d',
    'get_d_i',
    'get_ns',
    'get_ne',
    'cn_is_null',
    'get_Ms_i',
    'get_Ma_i',
    'get_Me_i',
    'get_M_i',
    'get_models_i',
    'get__init1',
]
struct_sd_net._fields_ = [
    ('ptr', POINTER(None)),
    ('sys', CFUNCTYPE(UNCHECKED(POINTER(sd_sys)), POINTER(sd_net))),
    ('free', CFUNCTYPE(UNCHECKED(None), POINTER(sd_net))),
    ('get_n', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net))),
    ('get_m', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net))),
    ('get_nnz', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net))),
    ('get_or', CFUNCTYPE(UNCHECKED(POINTER(c_uint32)), POINTER(sd_net))),
    ('get_or_i', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net), c_uint32)),
    ('get_ic', CFUNCTYPE(UNCHECKED(POINTER(c_uint32)), POINTER(sd_net))),
    ('get_ic_i', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net), c_uint32)),
    ('get_w', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_net))),
    ('get_w_i', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_net), c_uint32)),
    ('get_d', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_net))),
    ('get_d_i', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_net), c_uint32)),
    ('get_ns', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net))),
    ('get_ne', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net))),
    ('cn_is_null', CFUNCTYPE(UNCHECKED(c_bool), POINTER(sd_net))),
    ('get_Ms_i', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net), c_uint32)),
    ('get_Ma_i', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net), c_uint32)),
    ('get_Me_i', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net), c_uint32)),
    ('get_M_i', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_net), c_uint32)),
    ('get_models_i', CFUNCTYPE(UNCHECKED(POINTER(sd_sys)), POINTER(sd_net), c_uint32)),
    ('get__init1', CFUNCTYPE(UNCHECKED(c_bool), POINTER(sd_net))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 825
if hasattr(_libs['SDDEKit'], 'sd_net_new_het'):
    sd_net_new_het = _libs['SDDEKit'].sd_net_new_het
    sd_net_new_het.argtypes = [c_uint32, c_uint32, POINTER(c_uint32), POINTER(c_uint32), POINTER(c_uint32), POINTER(c_uint32), POINTER(POINTER(sd_sys)), c_uint32, POINTER(c_uint32), POINTER(c_uint32), POINTER(c_double), POINTER(c_double)]
    sd_net_new_het.restype = POINTER(sd_net)

# /home/mw/dev/sddekit/src/sddekit.h: 848
if hasattr(_libs['SDDEKit'], 'sd_net_new_hom'):
    sd_net_new_hom = _libs['SDDEKit'].sd_net_new_hom
    sd_net_new_hom.argtypes = [c_uint32, POINTER(sd_sys), c_uint32, c_uint32, c_uint32, c_uint32, POINTER(c_uint32), POINTER(c_uint32), POINTER(c_double), POINTER(c_double)]
    sd_net_new_hom.restype = POINTER(sd_net)

# /home/mw/dev/sddekit/src/sddekit.h: 861
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'sd_roi_new_default'):
        continue
    sd_roi_new_default = _lib.sd_roi_new_default
    sd_roi_new_default.argtypes = [c_uint32, POINTER(c_uint32)]
    sd_roi_new_default.restype = POINTER(sd_sys)
    break

# /home/mw/dev/sddekit/src/sddekit.h: 872
class struct_sd_out(Structure):
    pass

sd_out = struct_sd_out # /home/mw/dev/sddekit/src/sddekit.h: 867

struct_sd_out.__slots__ = [
    'ptr',
    'free',
    'apply',
]
struct_sd_out._fields_ = [
    ('ptr', POINTER(None)),
    ('free', CFUNCTYPE(UNCHECKED(None), POINTER(sd_out))),
    ('apply', CFUNCTYPE(UNCHECKED(sd_stat), POINTER(sd_out), c_double, c_uint32, POINTER(c_double), c_uint32, POINTER(c_double))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 901
if hasattr(_libs['SDDEKit'], 'sd_out_new_cb'):
    sd_out_new_cb = _libs['SDDEKit'].sd_out_new_cb
    sd_out_new_cb.argtypes = [POINTER(None), CFUNCTYPE(UNCHECKED(sd_stat), POINTER(None), c_double, c_uint32, POINTER(c_double), c_uint32, POINTER(c_double))]
    sd_out_new_cb.restype = POINTER(sd_out)

# /home/mw/dev/sddekit/src/sddekit.h: 913
class struct_sd_out_file(Structure):
    pass

sd_out_file = struct_sd_out_file # /home/mw/dev/sddekit/src/sddekit.h: 908

struct_sd_out_file.__slots__ = [
    'ptr',
    'out',
    'is_std',
    'get_fd',
]
struct_sd_out_file._fields_ = [
    ('ptr', POINTER(None)),
    ('out', CFUNCTYPE(UNCHECKED(POINTER(sd_out)), POINTER(sd_out_file))),
    ('is_std', CFUNCTYPE(UNCHECKED(c_bool), POINTER(sd_out_file))),
    ('get_fd', CFUNCTYPE(UNCHECKED(POINTER(FILE)), POINTER(sd_out_file))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 946
if hasattr(_libs['SDDEKit'], 'sd_out_file_new_from_name'):
    sd_out_file_new_from_name = _libs['SDDEKit'].sd_out_file_new_from_name
    sd_out_file_new_from_name.argtypes = [String]
    sd_out_file_new_from_name.restype = POINTER(sd_out_file)

# /home/mw/dev/sddekit/src/sddekit.h: 955
if hasattr(_libs['SDDEKit'], 'sd_out_file_new_from_std'):
    sd_out_file_new_from_std = _libs['SDDEKit'].sd_out_file_new_from_std
    sd_out_file_new_from_std.argtypes = [POINTER(FILE)]
    sd_out_file_new_from_std.restype = POINTER(sd_out_file)

# /home/mw/dev/sddekit/src/sddekit.h: 964
class struct_sd_out_mem(Structure):
    pass

sd_out_mem = struct_sd_out_mem # /home/mw/dev/sddekit/src/sddekit.h: 959

struct_sd_out_mem.__slots__ = [
    'ptr',
    'out',
    'get_nx',
    'get_nc',
    'get_n_sample',
    'get_capacity',
    'get_xs',
    'get_cs',
]
struct_sd_out_mem._fields_ = [
    ('ptr', POINTER(None)),
    ('out', CFUNCTYPE(UNCHECKED(POINTER(sd_out)), POINTER(sd_out_mem))),
    ('get_nx', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_out_mem))),
    ('get_nc', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_out_mem))),
    ('get_n_sample', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_out_mem))),
    ('get_capacity', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_out_mem))),
    ('get_xs', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_out_mem))),
    ('get_cs', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_out_mem))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 1026
if hasattr(_libs['SDDEKit'], 'sd_out_mem_new'):
    sd_out_mem_new = _libs['SDDEKit'].sd_out_mem_new
    sd_out_mem_new.argtypes = []
    sd_out_mem_new.restype = POINTER(sd_out_mem)

# /home/mw/dev/sddekit/src/sddekit.h: 1035
class struct_sd_out_tee(Structure):
    pass

sd_out_tee = struct_sd_out_tee # /home/mw/dev/sddekit/src/sddekit.h: 1030

struct_sd_out_tee.__slots__ = [
    'ptr',
    'out',
    'get_nout',
    'outs_is_null',
    'set_out',
    'get_out',
]
struct_sd_out_tee._fields_ = [
    ('ptr', POINTER(None)),
    ('out', CFUNCTYPE(UNCHECKED(POINTER(sd_out)), POINTER(sd_out_tee))),
    ('get_nout', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_out_tee))),
    ('outs_is_null', CFUNCTYPE(UNCHECKED(c_bool), POINTER(sd_out_tee))),
    ('set_out', CFUNCTYPE(UNCHECKED(sd_stat), POINTER(sd_out_tee), c_uint32, POINTER(sd_out))),
    ('get_out', CFUNCTYPE(UNCHECKED(POINTER(sd_out)), POINTER(sd_out_tee), c_uint32)),
]

# /home/mw/dev/sddekit/src/sddekit.h: 1087
if hasattr(_libs['SDDEKit'], 'sd_out_tee_new'):
    sd_out_tee_new = _libs['SDDEKit'].sd_out_tee_new
    sd_out_tee_new.argtypes = [c_uint32]
    sd_out_tee_new.restype = POINTER(sd_out_tee)

# /home/mw/dev/sddekit/src/sddekit.h: 1096
class struct_sd_out_tavg(Structure):
    pass

sd_out_tavg = struct_sd_out_tavg # /home/mw/dev/sddekit/src/sddekit.h: 1094

struct_sd_out_tavg.__slots__ = [
    'ptr',
    'out',
    'get_len',
    'get_pos',
    'get_t',
    'get_out',
    'get_x',
    'get_c',
]
struct_sd_out_tavg._fields_ = [
    ('ptr', POINTER(None)),
    ('out', CFUNCTYPE(UNCHECKED(POINTER(sd_out)), POINTER(sd_out_tavg))),
    ('get_len', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_out_tavg))),
    ('get_pos', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_out_tavg))),
    ('get_t', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_out_tavg))),
    ('get_out', CFUNCTYPE(UNCHECKED(POINTER(sd_out)), POINTER(sd_out_tavg))),
    ('get_x', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_out_tavg))),
    ('get_c', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_out_tavg))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 1143
if hasattr(_libs['SDDEKit'], 'sd_out_tavg_new'):
    sd_out_tavg_new = _libs['SDDEKit'].sd_out_tavg_new
    sd_out_tavg_new.argtypes = [c_uint32, POINTER(sd_out)]
    sd_out_tavg_new.restype = POINTER(sd_out_tavg)

# /home/mw/dev/sddekit/src/sddekit.h: 1152
class struct_sd_out_sfilt(Structure):
    pass

sd_out_sfilt = struct_sd_out_sfilt # /home/mw/dev/sddekit/src/sddekit.h: 1147

struct_sd_out_sfilt.__slots__ = [
    'ptr',
    'out',
    'get_nfilt',
    'get_filtlen',
    'get_xfilts',
    'get_cfilts',
    'get_x',
    'get_c',
    'get_out',
]
struct_sd_out_sfilt._fields_ = [
    ('ptr', POINTER(None)),
    ('out', CFUNCTYPE(UNCHECKED(POINTER(sd_out)), POINTER(sd_out_sfilt))),
    ('get_nfilt', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_out_sfilt))),
    ('get_filtlen', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_out_sfilt))),
    ('get_xfilts', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_out_sfilt))),
    ('get_cfilts', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_out_sfilt))),
    ('get_x', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_out_sfilt))),
    ('get_c', CFUNCTYPE(UNCHECKED(POINTER(c_double)), POINTER(sd_out_sfilt))),
    ('get_out', CFUNCTYPE(UNCHECKED(POINTER(sd_out)), POINTER(sd_out_sfilt))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 1207
if hasattr(_libs['SDDEKit'], 'sd_out_sfilt_new'):
    sd_out_sfilt_new = _libs['SDDEKit'].sd_out_sfilt_new
    sd_out_sfilt_new.argtypes = [c_uint32, c_uint32, POINTER(c_double), POINTER(c_double), POINTER(sd_out)]
    sd_out_sfilt_new.restype = POINTER(sd_out_sfilt)

# /home/mw/dev/sddekit/src/sddekit.h: 1215
if hasattr(_libs['SDDEKit'], 'sd_out_new_until'):
    sd_out_new_until = _libs['SDDEKit'].sd_out_new_until
    sd_out_new_until.argtypes = [c_double]
    sd_out_new_until.restype = POINTER(sd_out)

# /home/mw/dev/sddekit/src/sddekit.h: 1221
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'sd_out_ignore'):
        continue
    sd_out_ignore = _lib.sd_out_ignore
    sd_out_ignore.argtypes = [c_bool, c_bool]
    sd_out_ignore.restype = POINTER(sd_out)
    break
